# Talenti_MVP

./: .env  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY.md  ENV_SETUP.md  FRONTEND_GUIDE.md  FRONTEND_MIGRATION_PLAN.md  HANDOVER.md  INTEGRATION_GUIDE.md  MODEL_SERVICE_SETUP_PROMPT.md  MONITORING.md  PROMPT_MODEL_SERVICE_1.txt  PROMPT_MODEL_SERVICE_2.txt  PROMPT_SKILLS_MODEL_SPEC.md  PYTHON_MIGRATION_CHECKLIST.md  PYTHON_MIGRATION_PROMPT.md  PYTHON_REBUILD_GUIDE.md  README.md  SECURITY.md  SQLITE_MIGRATION.md  TESTING_STRATEGY.md  components.json  docker-compose.external-db.yml  docker-compose.override.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  tailwind.config.js  vite.config.js  vitest.config.js
backend/: .pytest.sqlite3  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  db.py  main.py  worker_main.py
backend/scripts/: run_migrations.py
backend/tests/: conftest.py  tds_contract_helpers.py  test_api_routes.py  test_culture_fit_pipeline.py  test_decision_human_review_api.py  test_decision_inspection_api.py  test_decision_layer.py  test_decision_persistence.py  test_decision_schema_models.py  test_interview_lifecycle_and_storage.py  test_interview_scoring_shadow_decision.py  test_ml_client_service.py  test_org_environment_setup.py  test_recruiter_decision_api.py  test_recruiter_skills_assessment_summary_api.py  test_resume_parsing_service.py  test_service_helpers.py  test_shortlist_quarantine.py  test_skills_assessment_inspection_api.py  test_skills_assessment_summary_shadow.py  (+3 more)
(+438 files in other folders)
