[build-system]
requires = ["setuptools>=68", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "talenti-backend"
version = "0.1.0"
description = "FastAPI backend for Talenti"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "bcrypt>=4.0.1,<5",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.0",
  "azure-identity>=1.16.0",
  "azure-storage-blob>=12.20.0",
  "azure-communication-identity>=1.3.0",
  "openai>=1.35.0",
  "pypdf>=5.3.0",
  "python-docx>=1.1.2",
  "pytest>=8.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["app"]
